2000-08-03  Ettore Perazzoli  <ettore@helixcode.com>

	* filter-folder.c (button_clicked): Use the base name of the
	Evoluton URI for the button's label.
	(get_widget): Likewise.

2000-08-03  Peter Williams  <peterw@helixcode.com>

	* filter-driver.c (op_filter_mail): Conform to the new mail-threads
	interface.

2000-08-01  Not Zed  <NotZed@HelixCode.com>

	* vfolder-editor.c (rule_add): Oops, create a vfolder_rule when we
	add a new one.

	* rule-context.c (load): If there are no user rules, dont bomb
	out.

2000-07-31  Not Zed  <NotZed@HelixCode.com>

	* filter-input.c (filter_input_set_value): Set value of a simple
	type to a new string.

	* filter-option.c (filter_option_set_current): New function to set
	the current value of an option.

	* filter-rule.c (filter_rule_find_list): New function to find a
	rule in a list, by name.
	(filter_rule_set_name): Let you set the name of a rule.

	* rule-context.c (rule_context_find_rule): Find a rule by name.
	(rule_context_create_part): Helper to find and clone a part by
	name.

	* filter-folder.c (button_clicked): Fix warning.

	* filter.glade: Add new widgets for vfolder rule editor.
	
	* vfolder-context.c (vfolder_context_init): Changed to use vfolder
	rule as the rule type.

	* vfolder-rule.c: New class to encode extra information required
	for vfolder rules.

2000-07-30  Not Zed  <NotZed@HelixCode.com>

	**  Almost a total rewrite of every file, except for filter-driver
	which just had minor updates.

	The rule format has changed.

2000-07-24  Dan Winship  <danw@helixcode.com>

	* filter-driver.c (do_delete, filter_driver_run): Update for
	CamelFolder API changes. (delete_message and get_uids don't take
	exceptions any more.)

2000-07-21  Peter Williams  <peterw@helixcode.com>

	* filter-driver.c (cleanup_filter_mail): Use the exception
	provided to us by the async manager instead of allocating
	our own; use mail_tool_camel_lock_{up,down} around camel
	operations.
	(filter_driver_run): Make it return void.
